# autonomous-RC-car

./: .gitignore  README.md  documentation.txt
driving_controls_msg_cpp/: CMakeLists.txt  howToRunDrivingControls.txt  package.xml
driving_controls_msg_cpp/include/: JHPWMPCA9685.h
driving_controls_msg_cpp/msg/: driving_controls.msg
driving_controls_msg_cpp/src/: driving_control_sub.cpp  driving_controls_pub.cpp
height_measurement_research/: CMakeLists.txt  package.xml
height_measurement_research/scripts/: ObjectMeasurement.py  cameraTest.py  test2.py  test3.py
height_measurement_research/src/: test.mkv  utils.py
launch/: CMakeLists.txt  package.xml
pilot/: CMakeLists.txt  package.xml
pilot/include/: LaneDetector.hpp
pilot/src/: LaneDetector.cpp  autopilot.cpp  key_controls.cpp  runLaneDetector.cpp  tests_autopilot.cpp
rplidar_ros/: CMakeLists.txt  package.xml
rplidar_ros/src/: ObjectDetectionHeightMeasurement.cpp  obstacleDetection.cpp
vision/: CMakeLists.txt  package.xml
vision/src/: RosVideoCapture.cpp  heightMeasurement.cpp  videoCapture.cpp  vision_height_measurement_pub.cpp  vision_pub.cpp  vision_sub.cpp
